--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
 
 .table-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.button-container {
+  display: flex;
 }
